--- a/1.PCA_Classification_Best_model_Save.ipynb
+++ b/1.PCA_Classification_Best_model_Save.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kernal PCA \n",
+    "# PCA \n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,10 +17,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import chi2\n",
-    "from sklearn.feature_selection import RFE"
+    "\n"
    ]
   },
   {
@@ -36,14 +33,8 @@
     "    pca = PCA(n_components=2)\n",
     "    xTrain=pca.fit_transform(x_train)\n",
     "    xTest=pca.transform(x_test)\n",
-    "    #print(\"featurenames\",pca.get_feature_names_out)\n",
     "    \n",
     "    explained_variance = pca.explained_variance_ratio_\n",
-    "    \n",
-    "#    kpca_features=pd.Dataframe(xTrain, columns = [f'PC{i}' for i in range(1, xTrain.shape[1] +1) ])\n",
-    "                                                  \n",
-    "    # Show the transformed features\n",
-    "#    print(kpca_features.head())\n",
     "    \n",
     "    return explained_variance, xTrain, xTest\n",
     "\n",
