--- a/2.LDA_Classification_Best_model_Save.ipynb
+++ b/2.LDA_Classification_Best_model_Save.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Linear Discrminant Analysis (LDA)\n",
+    "# Linear Discriminant Analysis (LDA)\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
