--- a/2.LDA_Classification_Best_model_Save.ipynb
+++ b/2.LDA_Classification_Best_model_Save.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "456dae46-bad6-45b4-9710-a5ea3b3c8d13",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "6121bbaa-3733-4ac6-b697-f938a81ec7b6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "    lda = LDA(n_components=n)\n",
     "    xTrain =lda.fit_transform(x_train, y_train )\n",
     "    xTest= lda.transform(x_test)\n",
-    "    return xTrain, xTest\n",
+    "    return xTrain, xTest, lda\n",
     "\n",
     "def Split_Scaler(indep,dep):\n",
     "    x_train,x_test,y_train,y_test=train_test_split(indep,dep,test_size=0.30,random_state=0)\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "0b8dadee-6fcf-4683-a3ce-5b2487f0d056",
    "metadata": {},
    "outputs": [
@@ -161,9 +161,10 @@
     "\n",
     "\n",
     "# Applying LDA...\n",
-    "xTrain, xTest = lda(x_train, y_train, x_test, 2)\n",
+    "xTrain, xTest, lda_obj = lda(x_train, y_train, x_test, 2)\n",
     "\n",
-    "\n",
+    "# Saving the LDA...\n",
+    "pickle.dump(lda_obj, open(\"lda.pkl\",'wb'))\n",
     "\n",
     "acc_logistic=[]\n",
     "acc_svmL=[]\n",
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "62dd3e69-07f2-4434-b1ab-94f9d7ee8527",
    "metadata": {},
    "outputs": [
@@ -188,7 +189,7 @@
        "Text(0, 0.5, 'LDA 2')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "1be0ad01-43c9-4234-bb98-47274cc17f48",
    "metadata": {},
    "outputs": [
@@ -221,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:87: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:87: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -232,7 +233,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  table['Logistic'][idex]= acc_logistic[number]\n",
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:88: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:88: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -243,7 +244,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  table['SVM_linear'][idex]= acc_svmL[number]\n",
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:89: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:89: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -254,7 +255,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  table['SVM_Nonlinear'][idex]= acc_svmNL[number]\n",
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:90: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:90: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -265,7 +266,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  table['KNN'][idex]= acc_knn[number]\n",
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:91: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:91: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -276,7 +277,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  table['Random'][idex]= acc_rf[number]\n",
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:92: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:92: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -287,7 +288,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  table['Decision'][idex]= acc_des[number]\n",
-      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_1858/697126600.py:93: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/var/folders/1s/70xy4dvs6mn0zqfz6nvhbypw0000gn/T/ipykernel_9815/3278834429.py:93: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "157ce677-4844-487a-a378-0d020795b7ad",
    "metadata": {},
    "outputs": [
@@ -384,7 +385,7 @@
        "LDA      1.0        1.0           1.0  0.981481  0.981481  0.981481  0.981481"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "1af35d68-8f9e-46bb-92b3-7db559d5799d",
    "metadata": {},
    "outputs": [],
@@ -405,17 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "d57c45c1-bc60-4656-b28b-250db4ef70f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sclassifier,cm,clf_report,accuracy_score,x_test,y_test,y_pred = svm_nonlinear(xTrain,y_train,xTest)\n"
+    "svm_Nlinear_classifier ,cm,clf_report,accuracy_score,x_test,y_test,y_pred = svm_nonlinear(xTrain,y_train,xTest)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "7d6fdb81-5893-45ee-9351-fcc2a8023fdc",
    "metadata": {},
    "outputs": [],
@@ -425,19 +426,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "f8a07dee-f110-4f32-870d-949878c3015a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the SVM_Nonlinear classfication model\n",
     "\n",
-    "pickle.dump(svm_linear_classifier,open(\"Finalized_svm_Nonlinear_Model\",'wb'))"
+    "pickle.dump(svm_Nlinear_classifier,open(\"Finalized_svm_Nonlinear_Model\",'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "05ebb2b7-bc63-48c9-bc2d-725c8ac9f7e6",
    "metadata": {},
    "outputs": [],
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "id": "f4118272-5df4-4e4f-a758-3d5cf426ba2e",
    "metadata": {},
    "outputs": [
@@ -484,6 +485,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "92090295-da43-41d0-8ce2-dd9692fb38db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c465c28-d117-4596-ad06-1dc643b468fc",
    "metadata": {},
    "outputs": [],
    "source": []
