--- a/2.11. LDA_Classification_Best_model_Saved_Deployment.ipynb
+++ b/2.11. LDA_Classification_Best_model_Saved_Deployment.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deployment of SVM-NonLinear model since accuracy score \n",
+    "# Deployment of SVM-NonLinear model since high accuracy score \n",
     "\n",
     "import pandas as pd\n",
     "import pickle\n",
