--- a/3.11. KPCA_Classification_Best_model_Saved_Deployment.ipynb
+++ b/3.11. KPCA_Classification_Best_model_Saved_Deployment.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deployment od SVM-NonLinear model since accuracy score is high when we using the LDA out of PCA, KPCA\n",
-    "\n",
+    "# Deployment od SVM-NonLinear model since high accuracy score \n",
     "import pandas as pd\n",
     "import pickle\n"
    ]
