--- a/1.11. PCA_Classification_Best_model_Saved_Deployment.ipynb
+++ b/1.11. PCA_Classification_Best_model_Saved_Deployment.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deployment od SVM-NonLinear model since accuracy score is high when we using the LDA out of PCA, KPCA\n",
+    "# Deployment of SVM-Linear model since high accuracy score \n",
     "\n",
     "import pandas as pd\n",
     "import pickle\n",
